# aurora-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
aurora_demo/capi_lib/: lib.cpp  ripemd160.h  vm_context.h  vm_ext.h  vm_import_logic.h  vm_memory.h  vm_util.h
aurora_demo/test/: main.cpp  t
aurora_demo_standalone/: run.sh
aurora_demo_standalone/capi_lib/: sh256.h  vm_context.h  vm_ext.h  vm_memory.h
evm_engine_rs/: CMakeLists.txt  build.rs
evm_engine_rs/engine/: Cargo.toml
evm_engine_rs/engine-precompiles/: Cargo.toml
evm_engine_rs/engine-precompiles/src/: blake2.rs  bn128.rs  hash.rs  lib.rs  modexp.rs  prelude.rs  secp256k1.rs
evm_engine_rs/engine-sdk/: Cargo.toml
evm_engine_rs/engine-sdk/src/: env.rs  error.rs  io.rs  lib.rs  runtime.rs  types.rs
evm_engine_rs/engine-transactions/: Cargo.toml
evm_engine_rs/engine-types/: Cargo.toml
evm_engine_rs/engine-types/src/: account_id.rs  lib.rs  storage.rs
evm_engine_rs/engine-types/src/types/: mod.rs
evm_engine_rs/engine/src/: engine.rs  engine_interface.rs  error.rs  interface.rs  lib.rs  parameters.rs  prelude.rs
mock_top_api/: evm_engine_interface.h  vm_context.h  vm_ext.h  vm_import_instance.cpp  vm_import_instance.h  vm_import_logic.h  vm_logic.cpp  vm_logic.h  vm_util.cpp  vm_util.h
tests/: CMakeLists.txt  evm_engine_interface.h  test_aurora_demo.cpp
tests/evm_test_fixture/: xmock_evm_storage.cpp  xmock_evm_storage.h
tests/xevm_test/: test_aurora_demo.cpp
xevm_engine_rs/: CMakeLists.txt  build.rs
xevm_engine_rs/engine-precompiles/src/: blake2.rs  bn128.rs  secp256k1.rs
xevm_engine_rs/engine-sdk/: Cargo.toml
xevm_engine_rs/engine-sdk/src/: lib.rs  runtime.rs  types.rs
xevm_engine_rs/engine-types/src/: account_id.rs
xevm_engine_rs/engine/src/: interface.rs  lib.rs  util.rs
xevm_runtime/: CMakeLists.txt  README.md  evm_context.h  evm_import_instance.cpp  evm_import_instance.h  evm_storage_base.h  evm_util.cpp  vm_ext.h  vm_import_instance.cpp  vm_util.cpp
