[package]
name = "engine-transactions"
version = "0.1.0"
authors = []
edition = "2021"
description = ""
documentation = ""
readme = false
homepage = ""
repository = ""
license = ""
publish = false
autobenches = false

[dependencies]
engine-types = { path = "../engine-types", default-features = false }
engine-precompiles = { path = "../engine-precompiles", default-features = false }
engine-sdk = { path = "../engine-sdk", default-features = false }
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", rev = "f4ee520254856898d451c7225851520a35c97cea", default-features = false }
rlp = { version = "0.5.0", default-features = false }

[features]
std = ["engine-types/std", "engine-precompiles/std", "engine-sdk/std", "evm/std", "rlp/std"]