[package]
name = "engine"
version = "0.1.0"
authors = []
edition = "2021"
description = ""
documentation = ""
readme = false
homepage = ""
repository = ""
license = ""
publish = false
autobenches = false

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
engine-types = { path = "../engine-types", default-features = false }
engine-sdk = { path = "../engine-sdk", default-features = false }
engine-precompiles = { path = "../engine-precompiles", default-features = false }
engine-transactions = { path = "../engine-transactions", default-features = false }
borsh = { version = "0.8.2", default-features = false }


[features]
default = ["std"]
std = ["engine-types/std","engine-sdk/std","engine-precompiles/std","engine-transactions/std"]