[package]
name = "xevm_engine"
version = "0.1.0"
authors = []
edition = "2021"
description = ""
documentation = ""
readme = false
homepage = ""
repository = ""
license = ""
publish = false
autobenches = false

[lib]
crate_type = ["rlib", "staticlib"]

[dependencies]
engine-types = { path = "../engine-types", default-features = false }
engine-sdk = { path = "../engine-sdk", default-features = false }
engine-precompiles = { path = "../engine-precompiles", default-features = false }
engine-transactions = { path = "../engine-transactions", default-features = false }
borsh = { version = "0.8.2", default-features = false }
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", rev = "f4ee520254856898d451c7225851520a35c97cea", default-features = false }
evm-core = { git = "https://github.com/aurora-is-near/sputnikvm.git", rev = "f4ee520254856898d451c7225851520a35c97cea", default-features = false }


[features]
default = ["std"]
std = ["engine-types/std","engine-sdk/std","engine-precompiles/std","engine-transactions/std"]